# VK_Internship_map

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  kvstorage.cpp  kvstorage.h
tests/: kv_storage_test.cpp
